@@ -4,6 +4,7 @@
 	Define isAttrItem function.
 	Fix isNodeItem function. Now this function returns false when
 	argument is Attr.
+	Define getParentElement function.
 
 	* tryXpath/scripts/try_xpath_content.js:
 	Change genericListener.listeners.execute function to return
